--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -1,4 +1,27 @@
-/* Reset styles */
+@font-face {
+  font-family: 'Gilroy';
+  src: url(../fonts/Gilroy-Regular.ttf);
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: 'Gilroy';
+  src: url(../fonts/Gilroy-Medium.ttf);
+  font-weight: 500;
+}
+
+@font-face {
+  font-family: 'Gilroy';
+  src: url(../fonts/Gilroy-Semibold.ttf);
+  font-weight: 600;
+}
+
+body {
+  font-family: 'Gilroy', sans-serif;
+  background-color: #fbfbfb;
+  color: #0c0c0c;
+}
+
 h1,
 h2,
 h3,
