--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -1,18 +1,21 @@
 @font-face {
   font-family: 'Gilroy';
-  src: url(../fonts/Gilroy-Regular.ttf);
+  src: url(../fonts/Gilroy-Regular.woff2) format('woff2'),
+    url(../fonts/Gilroy-Regular.woff) format('woff');
   font-weight: 400;
 }
 
 @font-face {
   font-family: 'Gilroy';
-  src: url(../fonts/Gilroy-Medium.ttf);
+  src: url(../fonts/Gilroy-Medium.woff2) format('woff2'),
+    url(../fonts/Gilroy-Medium.woff) format('woff');
   font-weight: 500;
 }
 
 @font-face {
   font-family: 'Gilroy';
-  src: url(../fonts/Gilroy-Semibold.ttf);
+  src: url(../fonts/Gilroy-Semibold.woff2) format('woff2'),
+    url(../fonts/Gilroy-Semibold.woff) format('woff');
   font-weight: 600;
 }
 
