--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,30 @@
+@font-face {
+  font-family: 'Gilroy';
+  src: url(../fonts/Gilroy-Regular.woff2) format('woff2'),
+    url(../fonts/Gilroy-Regular.woff) format('woff');
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: 'Gilroy';
+  src: url(../fonts/Gilroy-Medium.woff2) format('woff2'),
+    url(../fonts/Gilroy-Medium.woff) format('woff');
+  font-weight: 500;
+}
+
+@font-face {
+  font-family: 'Gilroy';
+  src: url(../fonts/Gilroy-Semibold.woff2) format('woff2'),
+    url(../fonts/Gilroy-Semibold.woff) format('woff');
+  font-weight: 600;
+}
+
+body {
+  font-family: 'Gilroy', sans-serif;
+  background-color: #fbfbfb;
+  color: #0c0c0c;
+}
+
 @import url('./reset.css');
 @import url('./header.css');
 @import url('./hero.css');
