--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -13,7 +13,7 @@
 .reviews-item {
   background-color: #f3f3f3;
   border-radius: 30px;
-  padding: 32px 0;
+  padding: 32px 36px;
   display: flex;
   flex-direction: column;
   align-items: center;
