add header html file

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,3 +1,55 @@
 <header>
-    
+   <div>
+    <nav><a href="">watchcharm</a>
+    <ul>
+        <li>
+            <a href="">Home</a>
+        </li>
+        <li>
+            <a href="">About Us</a>
+        </li>
+        <li>
+            <a href="">Catalog</a>
+        </li>
+        <li>
+            <a href="">Sale</a>
+        </li>
+        <li>
+            <a href="">Reviews</a>
+        </li>
+        <li>
+            <a href="">Contact Us</a>
+        </li>
+    </ul>
+    </nav>
+    <ul>
+        <li>
+            <a>
+                <svg>
+                    <use>
+                        
+                    </use>
+                </svg>
+            </a>
+        </li>
+        <li>
+            <a>
+                <svg>
+                    <use>
+                        
+                    </use>
+                </svg>
+            </a>
+        </li>
+        <li>
+            <a>
+                <svg>
+                    <use>
+                        
+                    </use>
+                </svg>
+            </a>
+        </li>
+    </ul>
+   </div> 
 </header>
