--- a/src/partials/catalog.html
+++ b/src/partials/catalog.html
@@ -5,10 +5,13 @@
       <li class="item-cat">
         <div class="card-watch">
           <img
+            class="img"
             src="../img/catalog-img/GarminFenix7XPro@mob-1x.png"
             alt="GarminFenix7XPro"
           />
-          <h2 class="watch-name">Garmin Fenix 7X Pro Sapphire Solar</h2>
+        </div>
+        <div class="text-name-price">
+          <h3 class="watch-name">Garmin Fenix 7X Pro Sapphire Solar</h3>
           <p class="text-card">€500</p>
         </div>
       </li>
