--- a/src/partials/advertisement.html
+++ b/src/partials/advertisement.html
@@ -3,5 +3,5 @@
     <p class="advert-text">
         Choose <span class="advert-span">your story</span>, making every moment unique. Time is your style, and we reveal it.
     </p>
-    <a class="advert-link" href="#contacts">Contact Us</a>
+    <a class="advert-link" href="#contact">Contact Us</a>
     </section>
