change header html

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -25,27 +25,27 @@
     <ul>
         <li>
             <a>
-                <svg>
-                    <use>
-                        
+                <svg width="36" height="36">
+                    <use href="../img/icons.svg#icon-facebook">
+
                     </use>
                 </svg>
             </a>
         </li>
         <li>
             <a>
-                <svg>
-                    <use>
-                        
+                <svg width="36" height="36">
+                    <use href="../img/icons.svg#icon-instagram">
+
                     </use>
                 </svg>
             </a>
         </li>
         <li>
             <a>
-                <svg>
-                    <use>
-                        
+                <svg width="36" height="36">
+                    <use href="./img/icons.svg#icon-youtube">
+
                     </use>
                 </svg>
             </a>
