--- a/src/partials/advertisement.html
+++ b/src/partials/advertisement.html
@@ -1,7 +1,10 @@
-<section class="advertise">
-    <h2 class="visually-hidden">Advertisement</h2>
-    <p class="advert-text">
-        Choose <span class="advert-span">your story</span>, making every moment unique. Time is your style, and we reveal it.
-    </p>
-    <a class="advert-link" href="#contact">Contact Us</a>
+<section class="container">
+
+    <div class="advertise">
+        <h2 class="visually-hidden">Advertisement</h2>
+        <p class="advert-text">
+            Choose <span class="advert-span">your story</span>, making every moment unique. Time is your style, and we reveal it.
+        </p>
+        <a class="advert-link" href="#contact">Contact Us</a>
+    </div>
     </section>
