--- a/src/partials/advertisement.html
+++ b/src/partials/advertisement.html
@@ -1,6 +1,6 @@
-<section class="container">
+<section class="advertise">
 
-    <div class="advertise">
+    <div class="container">
         <h2 class="visually-hidden">Advertisement</h2>
         <p class="advert-text">
             Choose <span class="advert-span">your story</span>, making every moment unique. Time is your style, and we reveal it.
