change files about.html, about.css, img/about

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,19 +1,47 @@
 <section class="about">
   <div class="container">
-    <h2 class="about-title">About Us</h2>
-    <p class="about-text">
-      Welcome to our premium watch collection, where luxury and style meet
-      functionality and precision. Our selection of timepieces embodies the very
-      best in Swiss craftsmanship and engineering, ensuring that you'll always
-      have a reliable and stylish accessory on your wrist.
-    </p>
-    <p class="about-text">
-      At our premium watch collection, we believe that a watch is more than just
-      a timekeeping device – it's a statement piece that reflects your
-      personality and style. So why settle for anything less than the best?
-    </p>
-    <button class="about-btn" type="button">
-      <a href="#Catalog">View catalog</a>
-    </button>
+    <div class="about-wrap">
+      <h2 class="about-title">About Us</h2>
+      <p class="about-text">
+        Welcome to our premium watch collection, where luxury and style meet
+        functionality and precision. Our selection of timepieces embodies the
+        very best in Swiss craftsmanship and engineering, ensuring that you'll
+        always have a reliable and stylish accessory on your wrist.
+      </p>
+      <p class="about-text-us">
+        At our premium watch collection, we believe that a watch is more than
+        just a timekeeping device – it's a statement piece that reflects your
+        personality and style. So why settle for anything less than the best?
+      </p>
+      <button class="about-btn" type="button">
+        <a href="#Catalog"></a>View catalog
+      </button>
+    </div>
+    <div class="about-image">
+      <picture>
+        <source
+          srcset="
+            ./img/about/aboutdesktop1x-min.jpg 1x,
+            ./img/about/aboutdesktop2x-min.jpg 2x
+          "
+          media="(min-width: 1280px)"
+        />
+        <source
+          srcset="
+            ./img/about/abouttab1x-min.jpg 1x,
+            ./img/about/abouttab2x-min.jpg 2x
+          "
+          media="(min-width: 768px)"
+        />
+        <source
+          srcset="
+            ./img/about/aboutmob1x-min.jpg 1x,
+            ./img/about/aboutmob2x-min.jpg 2x
+          "
+          media="(max-width: 767px)"
+        />
+        <img src="./img/about/aboutmob1x-min.jpg" alt="Watch" />
+      </picture>
+    </div>
   </div>
 </section>
