--- a/src/css/about.css
+++ b/src/css/about.css
@@ -1,6 +1,15 @@
 /* ______________about us__________ */
 
-.container {
+.about {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.about-wrap {
+  display: block;
+  flex-shrink: 0;
+  border-radius: 30px;
+  background: #f3f3f3;
   padding: 0 20px;
 }
 .about-title {
@@ -11,6 +20,8 @@
   letter-spacing: -0.64px;
   font-family: Gilroy;
   color: #0c0c0c;
+  padding-top: 40px;
+  padding-bottom: 28px;
 }
 
 .about-text {
@@ -20,6 +31,51 @@
   line-height: 18px;
   letter-spacing: -0.28px;
   color: rgba(12, 12, 12, 0.7);
-  padding: o 20px;
   margin-bottom: 20px;
+}
+
+.about-text-us {
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 18px;
+  letter-spacing: -0.28px;
+  color: rgba(12, 12, 12, 0.7);
+  margin-bottom: 0;
+}
+
+.about-btn {
+  margin-top: 40px;
+  margin-bottom: 40px;
+  min-width: 160px;
+  height: 48px;
+  flex-shrink: 0;
+  border-radius: 16px;
+  background-color: #3350e9;
+  color: #fbfbfb;
+  text-align: center;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 18px;
+  padding: 15px 38px;
+  border: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.about-btn:hover,
+.about-btn:focus {
+  background-color: #1f3cd4;
+}
+
+.about-image {
+  margin-top: 20px;
+  border-radius: 30px;
+  background: linear-gradient(
+      0deg,
+      rgba(12, 12, 12, 0.2) 0%,
+      rgba(12, 12, 12, 0.2) 100%
+    ),
+    url(<path-to-image>) lightgray -268.854px -7.491px / 257.167% 110.52%
+      no-repeat;
 }
