--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -13,9 +13,10 @@
         just a timekeeping device – it's a statement piece that reflects your
         personality and style. So why settle for anything less than the best?
       </p>
-      <button class="about-btn" type="button">
-        <a href="#Catalog"></a>View catalog
-      </button>
+
+      <div class="about-btn">
+        <a class="about-btn-us" href="#Catalog">View catalog</a>
+      </div>
     </div>
     <div class="about-image">
       <picture>
