--- a/src/partials/catalog.html
+++ b/src/partials/catalog.html
@@ -4,47 +4,211 @@
     <ul class="list-cat">
       <li class="item-cat">
         <div class="card-watch">
-          <img
-            class="img"
-            src="../img/catalog-img/GarminFenix7XPro@mob-1x.png"
-            alt="GarminFenix7XPro"
-          />
+          <picture>
+            <source
+              srcset="
+                ./img/catalog-img/desk-img/GarminFenix7XPro@desk-1x.png 1x,
+                ./img/catalog-img/desk-img/GarminFenix7XPro@desk-2x.png 2x
+              "
+              media="(min-width: 1280px)"
+            />
+            <source
+              srcset="
+                ./img/catalog-img/tab-img/GarminFenix7XPro@tab-1x.png 1x,
+                ./img/catalog-img/tab-img/GarminFenix7XPro@tab-2x.png 2x
+              "
+              media="(min-width: 768px)"
+            />
+            <source
+              srcset="
+                ./img/catalog-img/GarminFenix7XPro@mob-1x.png 1x,
+                ./img/catalog-img/GarminFenix7XPro@mob-2x.png 2x
+              "
+              media="(max-width: 767px)"
+            />
+            <img
+              class="img"
+              src="./img/catalog-img/GarminFenix7XPro@mob-1x.png"
+              alt="GarminFenix7XPro"
+            />
+          </picture>
         </div>
         <div class="text-name-price">
-          <h3 class="watch-name">Garmin Fenix 7X Pro Sapphire Solar</h3>
+          <h3 class="watch-name watch-name-text">
+            Garmin Fenix 7X Pro Sapphire Solar
+          </h3>
           <p class="text-card">€500</p>
         </div>
       </li>
       <li class="item-cat">
         <div class="card-watch">
-          <img src="" alt="" />
-          <p class="text-card"></p>
+          <picture>
+            <source
+              srcset="
+                ./img/catalog-img/desk-img/GarminMarqAthlete@desk-1x.png 1x,
+                ./img/catalog-img/desk-img/GarminMarqAthlete@desk-2x.png 2x
+              "
+              media="(min-width: 1280px)"
+            />
+            <source
+              srcset="
+                ./img/catalog-img/tab-img/GarminMarqAthlete@tab-1x.png 1x,
+                ./img/catalog-img/tab-img/GarminMarqAthlete@tab-2x.png 2x
+              "
+              media="(min-width: 768px)"
+            />
+            <source
+              srcset="
+                ./img/catalog-img/GarminMarqAthlete@mob-1x.png 1x,
+                ./img/catalog-img/GarminMarqAthlete@mob-2x.png 2x
+              "
+              media="(max-width: 767px)"
+            />
+            <img
+              class="img"
+              src="./img/catalog-img/GarminMarqAthlete@mob-1x.png"
+              alt="GarminMarqAthlete"
+            />
+          </picture>
+        </div>
+        <div class="text-name-price">
+          <h3 class="watch-name">Garmin Marq Athlete</h3>
+          <p class="text-card">€450</p>
         </div>
       </li>
       <li class="item-cat">
         <div class="card-watch">
-          <img src="" alt="" />
-          <p class="text-card"></p>
+          <picture>
+            <source
+              srcset="
+                ./img/catalog-img/desk-img/GarminDescentMK1@desk-1x.png 1x,
+                ./img/catalog-img/desk-img/GarminDescentMK1@desk-2x.png 2x
+              "
+              media="(min-width: 1280px)"
+            />
+            <source
+              srcset="
+                ./img/catalog-img/tab-img/GarminDescentMK1@tab-1x.png 1x,
+                ./img/catalog-img/tab-img/GarminDescentMK1@tab-2x.png 2x
+              "
+              media="(min-width: 768px)"
+            />
+            <source
+              srcset="
+                ./img/catalog-img/GarminDescentMK1@mob-1x.png 1x,
+                ./img/catalog-img/GarminDescentMK1@mob-2x.png 2x
+              "
+              media="(max-width: 767px)"
+            />
+            <img
+              class="img"
+              src="./img/catalog-img/GarminDescentMK1@mob-1x.png"
+              alt="GarminDescentMK1"
+            />
+          </picture>
+        </div>
+        <div class="text-name-price">
+          <h3 class="watch-name">Garmin Descent MK1</h3>
+          <p class="text-card">€680</p>
         </div>
       </li>
       <li class="item-cat">
         <div class="card-watch">
-          <img src="" alt="" />
-          <p class="text-card"></p>
+          <picture>
+            <source
+              srcset="
+                ./img/catalog-img/desk-img/GarminD2@desk-1x.png 1x,
+                ./img/catalog-img/desk-img/GarminD2@desk-2x.png 2x
+              "
+              media="(min-width: 1280px)"
+            />
+            <source
+              srcset="
+                ./img/catalog-img/tab-img/GarminD2@tab-1x.png 1x,
+                ./img/catalog-img/tab-img/GarminD2@tab-2x.png 2x
+              "
+              media="(min-width: 768px)"
+            />
+            <source
+              srcset="
+                ./img/catalog-img/GarminD2@mob-1x.png 1x,
+                ./img/catalog-img/GarminD2@mob-2x.png 2x
+              "
+              media="(max-width: 767px)"
+            />
+            <img
+              class="img"
+              src="./img/catalog-img/GarminD2@mob-1x.png"
+              alt="GarminD2"
+            />
+          </picture>
+        </div>
+        <div class="text-name-price">
+          <h3 class="watch-name">Garmin D2 Delta PX</h3>
+          <p class="text-card">€380</p>
         </div>
       </li>
-      <li class="item-cat">
+      <li class="item-cat item-cat-visibility">
         <div class="card-watch">
-          <img src="" alt="" />
-          <p class="text-card"></p>
+          <picture>
+            <source
+              srcset="
+                ./img/catalog-img/desk-img/GarminFenix6Pro@desk-1x.png 1x,
+                ./img/catalog-img/desk-img/GarminFenix6Pro@desk-2x.png 2x
+              "
+              media="(min-width: 1280px)"
+            />
+            <source
+              srcset="
+                ./img/catalog-img/tab-img/GarminFenix6Pro@tab-1x.png 1x,
+                ./img/catalog-img/tab-img/GarminFenix6Pro@tab-2x.png 2x
+              "
+              media="(min-width: 768px)"
+            />
+            <img
+              class="img"
+              src="./img/catalog-img/tab-img/GarminFenix6Pro@tab-1x.png"
+              alt="GarminFenix6Pro"
+            />
+          </picture>
+        </div>
+        <div class="text-name-price">
+          <h3 class="watch-name">Garmin Fenix 6 Pro Solar</h3>
+          <p class="text-card">€400</p>
         </div>
       </li>
-      <li class="item-cat">
+      <li class="item-cat item-cat-visibility">
         <div class="card-watch">
-          <img src="" alt="" />
-          <p class="text-card"></p>
+          <picture>
+            <source
+              srcset="
+                ./img/catalog-img/desk-img/TubeWatchS42@desk-1x.png 1x,
+                ./img/catalog-img/desk-img/TubeWatchS42@desk-2x.png 2x
+              "
+              media="(min-width: 1280px)"
+            />
+            <source
+              srcset="
+                ./img/catalog-img/tab-img/TubeWatchS42@tab-1x.png 1x,
+                ./img/catalog-img/tab-img/TubeWatchS42@tab-2x.png 2x
+              "
+              media="(min-width: 768px)"
+            />
+            <img
+              class="img"
+              src="./img/catalog-img/tab-img/TubeWatchS42@tab-1x.png"
+              alt="TubeWatchS42"
+            />
+          </picture>
+        </div>
+        <div class="text-name-price">
+          <h3 class="watch-name watch-name-text">
+            Tube Watch S42 Date Steel With Black Case
+          </h3>
+          <p class="text-card">€395</p>
         </div>
       </li>
     </ul>
+    <button class="show-btn" type="button">Show more</button>
   </div>
 </section>
