--- a/src/css/catalog.css
+++ b/src/css/catalog.css
@@ -9,7 +9,7 @@
   font-size: 32px;
   line-height: 1;
   letter-spacing: -0.02em;
-  padding-bottom: 24px;
+  margin-bottom: 24px;
   text-align: start;
 }
 
@@ -27,11 +27,11 @@
 }
 
 .img {
-  padding: 42px 64px 28px 63px;
+  margin: 42px 64px 28px 63px;
 }
 
 .text-name-price {
-  padding: 0 28px 24px 28px;
+  margin: 0 28px 24px 28px;
   text-align: start;
 }
 
@@ -40,7 +40,7 @@
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: -0.02em;
-  padding-bottom: 8px;
+  margin-bottom: 8px;
 }
 
 .text-card {
@@ -86,12 +86,12 @@
   }
 
   .item-cat {
-    min-width: 344px;
-    min-height: 414px;
+    width: 344px;
+    height: 414px;
   }
 
   .img {
-    padding: 34px 38px 20px 38px;
+    margin: 34px 38px 20px 38px;
   }
 
   .watch-name {
@@ -101,7 +101,7 @@
   }
 
   .watch-name-text {
-    width: 280px;
+    max-width: 280px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -128,11 +128,11 @@
   }
 
   .item-cat {
-    min-width: 368px;
-    min-height: 414px;
+    width: 368px;
+    height: 414px;
   }
 
   .watch-name-text {
-    width: 304px;
+    max-width: 304px;
   }
 }
