add css for mob and tab

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,52 +1,56 @@
 <section class="hero" id="hero">
   <div class="container container-hero">
-    <h1 class="hero-title">
-      Welcome to our <span class="hero-accent">collection</span> of premium
-      watches
-    </h1>
-    <p class="hero-text">
-      Our watches are not just timepieces, but also an expression of your
-      personality and lifestyle. From classic designs to modern ones, we have a
-      watch to suit every taste and occasion.
-    </p>
+    <div class="hero-wrap">
+      <div class="hero-text-wrap">
+        <h1 class="hero-title">
+          Welcome to our <span class="hero-accent">collection</span> of premium
+          watches
+        </h1>
+        <p class="hero-text">
+          Our watches are not just timepieces, but also an expression of your
+          personality and lifestyle. From classic designs to modern ones, we
+          have a watch to suit every taste and occasion.
+        </p>
+      </div>
+      <div class="hero-face-wrap">
+        <picture>
+          <source
+            srcset="
+              ../img/hero/hero-face-desc.png   1x,
+              ../img/hero/hero-face-desc2x.png 2x
+            "
+            media="(min-width: 1280px)"
+          />
+          <source
+            srcset="
+              ../img/hero/hero-face-tab.png   1x,
+              ../img/hero/hero-face-tab2x.png 2x
+            "
+            media="(min-width: 768px)"
+          />
+          <source
+            srcset="
+              /img/hero/hero-face-mob.png   1x,
+              /img/hero/hero-face-mob2x.png 2x
+            "
+            media="(max-width: 767px)"
+          />
+          <img
+            class="hero-face"
+            src="../img/hero/hero-face-desc.png"
+            alt="people"
+          />
+        </picture>
+        <a class="hero-scroll" href="#footer">Scroll down</a>
+      </div>
+    </div>
     <picture>
       <source
         srcset="
-          /img/hero/hero-face-mob.png   1x,
-          /img/hero/hero-face-mob2x.png 2x
-        "
-        media="(min-width: 320px)"
-      />
-      <source
-        srcset="
-          ../img/hero/hero-face-tab.png   1x,
-          ../img/hero/hero-face-tab2x.png 2x
-        "
-        media="(min-width: 768px)"
-      />
-      <source
-        srcset="
-          ../img/hero/hero-face-desc.png   1x,
-          ../img/hero/hero-face-desc2x.png 2x
+          ../img/hero/hero-watch-desc.png   1x,
+          ../img/hero/hero-watch-desc2x.png 2x
         "
         media="(min-width: 1280px)"
-      />
-      <img
-        class="hero-face"
-        src="../img/hero/hero-face-mob.png"
-        alt="people"
-        width="108"
-        height="44"
-      />
-    </picture>
-    <a class="hero-scroll" href="#footer">Scroll down</a>
-    <picture>
-      <source
-        srcset="
-          ../img/hero/hero-watch-mob.png   1x,
-          ../img/hero/hero-watch-mob2x.png 2x
-        "
-        media="(min-width: 320px)"
       />
       <source
         srcset="
@@ -57,17 +61,15 @@
       />
       <source
         srcset="
-          ../img/hero/hero-watch-desc.png   1x,
-          ../img/hero/hero-watch-desc2x.png 2x
+          ../img/hero/hero-watch-mob.png   1x,
+          ../img/hero/hero-watch-mob2x.png 2x
         "
-        media="(min-width: 1280px)"
+        media="(max-width: 767px)"
       />
       <img
         class="hero-watch"
         src="../img/hero/hero-watch-mob.png"
         alt="watch"
-        width="335"
-        height="366"
       />
     </picture>
   </div>
