--- a/src/css/advertisement.css
+++ b/src/css/advertisement.css
@@ -1,6 +1,6 @@
 .advertise {
     padding-top: 30px;
-    padding-left: 30px;
+    padding-bottom: 30px;
 }
 
 .adv-container {
@@ -10,8 +10,13 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    max-width: 335px;
     border-radius: 30px;
+}
+
+@media screen and (min-resolution: 2dppx), (min-resolution: 192dpi) {
+    .adv-container {
+        background-image: url(../img/advertisement/BGup-mob@2x.png);
+    }
 }
 
 .advert-text {
@@ -31,7 +36,7 @@
     display: block;
     font-weight: 500;
     font-size: 14px;
-    line-height: 1.29571;
+    line-height: 1.29;
     text-align: center;
     color: #fbfbfb;
     border: 1px solid rgba(251, 251, 251, 0.15);
@@ -57,8 +62,12 @@
 
     .adv-container {
         padding: 80px 64px;
-        max-width: 704px;
         background-image: url(../img/advertisement/BGup-tb.png);
+    }
+    @media screen and (min-resolution: 2dppx), (min-resolution: 192dpi) {
+        .adv-container {
+            background-image: url(../img/advertisement/BGup-tb@2x.png);
+        }
     }
 
     .advert-text {
@@ -77,9 +86,14 @@
 
     .adv-container {
         padding: 83px 80px;
-        max-width: 1150px;
         background-image: url(../img/advertisement/BGup-desk.png);
 
+    }
+
+    @media screen and (min-resolution: 2dppx), (min-resolution: 192dpi) {
+        .adv-container {
+            background-image: url(../img/advertisement/BGup-desk@2x.png);
+        }
     }
 
     .advert-wrap {
@@ -89,6 +103,7 @@
 
     .advert-text {
         max-width: 690px;
+        margin-bottom: 0;
 
     }
 
