--- a/src/partials/advertisement.html
+++ b/src/partials/advertisement.html
@@ -1,12 +1,14 @@
 <section class="advertise">
 
-    <div class="container adv-container">
-        <h2 class="visually-hidden">Advertisement</h2>
-        <div class="advert-wrap">
-            <p class="advert-text">
-                Choose <span class="advert-span">your story</span>, making every moment unique. Time is your style, and we reveal it.
-            </p>
-            <a class="advert-link" href="#contact">Contact Us</a>
+    <div class="container">
+        <div class="adv-container">
+            <h2 class="visually-hidden">Advertisement</h2>
+            <div class="advert-wrap">
+                <p class="advert-text">
+                    Choose <span class="advert-span">your story</span>, making every moment unique. Time is your style, and we reveal it.
+                </p>
+                <a class="advert-link" href="#contact">Contact Us</a>
+            </div>
         </div>
     </div>
     </section>
