--- a/src/css/about.css
+++ b/src/css/about.css
@@ -6,78 +6,48 @@
 }
 
 .about-wrap {
-  display: block;
-  flex-shrink: 0;
   border-radius: 30px;
   background: #f3f3f3;
-  padding: 0 20px;
-  padding-bottom: 40px;
+  padding: 40px 20px;
+  margin-bottom: 20px;
 }
 .about-title {
   font-size: 32px;
-  font-style: normal;
   font-weight: 600;
-  line-height: 32px;
-  letter-spacing: -0.64px;
-  font-family: Gilroy;
-  color: #0c0c0c;
-  padding-top: 40px;
-  padding-bottom: 28px;
+  line-height: 1;
+  letter-spacing: -0.02em;
+  margin-bottom: 28px;
 }
 
 .about-text {
   font-size: 14px;
-  font-style: normal;
   font-weight: 500;
-  line-height: 18px;
-  letter-spacing: -0.28px;
+  line-height: 1.29;
+  letter-spacing: -0.02em;
   color: rgba(12, 12, 12, 0.7);
   margin-bottom: 20px;
 }
 
-.about-text-us {
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 18px;
-  letter-spacing: -0.28px;
-  color: rgba(12, 12, 12, 0.7);
-  margin-bottom: 0;
+.about-text:nth-child(3) {
+  margin-bottom: 40px;
 }
 
 .about-btn-us {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 40px;
   width: 160px;
   height: 48px;
-  flex-shrink: 0;
   border-radius: 16px;
   background-color: #3350e9;
   color: #fbfbfb;
-  text-align: center;
   font-size: 14px;
-  font-style: normal;
   font-weight: 500;
-  line-height: 18px;
-  border: none;
+  line-height: 1.29;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .about-btn-us:hover,
 .about-btn-us:focus {
   background-color: #1f3cd4;
-}
-
-.about-image {
-  margin-top: 20px;
-  border-radius: 30px;
-  background: linear-gradient(
-      0deg,
-      rgba(12, 12, 12, 0.2) 0%,
-      rgba(12, 12, 12, 0.2) 100%
-    ),
-    url(<path-to-image>) lightgray -268.854px -7.491px / 257.167% 110.52%
-      no-repeat;
 }
