add styles.css tablet and change img/about, about.html

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,4 +1,4 @@
-<section class="about" id="About Us">
+<section class="about" id="about">
   <div class="container">
     <div class="about-wrap">
       <h2 class="about-title">About Us</h2>
@@ -37,7 +37,11 @@
         "
         media="(max-width: 767px)"
       />
-      <img src="./img/about/aboutdesktop1x-min.jpg" alt="Watch" />
+      <img
+        class="about-image"
+        src="./img/about/abouttab1x-min.jpg"
+        alt="Watch"
+      />
     </picture>
   </div>
 </section>
