--- a/src/css/about.css
+++ b/src/css/about.css
@@ -51,3 +51,34 @@
 .about-btn-us:focus {
   background-color: #1f3cd4;
 }
+
+@media screen and (min-width: 768px) {
+  .about {
+    padding-top: 40px;
+    padding-bottom: 40px;
+  }
+
+  .about-wrap {
+    border-radius: 50px;
+    padding: 80px 60px;
+    margin-bottom: 40px;
+  }
+
+  .about-title {
+    font-size: 48px;
+    line-height: 0.92;
+    margin-bottom: 40px;
+  }
+
+  .about-text {
+    font-size: 16px;
+    line-height: 1.25;
+  }
+
+  .about-text:nth-child(3) {
+    margin-bottom: 60px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+}
