--- a/src/partials/catalog.html
+++ b/src/partials/catalog.html
@@ -1,4 +1,4 @@
-<section class="section-catalog">
+<section id="Catalog" class="section-catalog">
   <div class="container container-catalog">
     <h2 class="title-cat">Catalog</h2>
     <ul class="list-cat">
@@ -6,29 +6,29 @@
         <picture>
           <source
             srcset="
-              ./img/catalog-img/desk-img/GarminFenix7XPro@desk-1x.png 1x,
-              ./img/catalog-img/desk-img/GarminFenix7XPro@desk-2x.png 2x
+              ./img/catalog/desk-img/GarminFenix7XPro@desk-1x.png 1x,
+              ./img/catalog/desk-img/GarminFenix7XPro@desk-2x.png 2x
             "
             media="(min-width: 1280px)"
           />
           <source
             srcset="
-              ./img/catalog-img/tab-img/GarminFenix7XPro@tab-1x.png 1x,
-              ./img/catalog-img/tab-img/GarminFenix7XPro@tab-2x.png 2x
+              ./img/catalog/tab-img/GarminFenix7XPro@tab-1x.png 1x,
+              ./img/catalog/tab-img/GarminFenix7XPro@tab-2x.png 2x
             "
             media="(min-width: 768px)"
           />
           <source
             srcset="
-              ./img/catalog-img/GarminFenix7XPro@mob-1x.png 1x,
-              ./img/catalog-img/GarminFenix7XPro@mob-2x.png 2x
+              ./img/catalog/GarminFenix7XPro@mob-1x.png 1x,
+              ./img/catalog/GarminFenix7XPro@mob-2x.png 2x
             "
             media="(max-width: 767px)"
           />
           <img
             class="img"
-            src="./img/catalog-img/GarminFenix7XPro@mob-1x.png"
-            alt="GarminFenix7XPro"
+            src="./img/catalog/GarminFenix7XPro@desk-1x.png"
+            alt="watch-1"
           />
         </picture>
         <div class="text-name-price">
@@ -42,29 +42,29 @@
         <picture>
           <source
             srcset="
-              ./img/catalog-img/desk-img/GarminMarqAthlete@desk-1x.png 1x,
-              ./img/catalog-img/desk-img/GarminMarqAthlete@desk-2x.png 2x
+              ./img/catalog/desk-img/GarminMarqAthlete@desk-1x.png 1x,
+              ./img/catalog/desk-img/GarminMarqAthlete@desk-2x.png 2x
             "
             media="(min-width: 1280px)"
           />
           <source
             srcset="
-              ./img/catalog-img/tab-img/GarminMarqAthlete@tab-1x.png 1x,
-              ./img/catalog-img/tab-img/GarminMarqAthlete@tab-2x.png 2x
+              ./img/catalog/tab-img/GarminMarqAthlete@tab-1x.png 1x,
+              ./img/catalog/tab-img/GarminMarqAthlete@tab-2x.png 2x
             "
             media="(min-width: 768px)"
           />
           <source
             srcset="
-              ./img/catalog-img/GarminMarqAthlete@mob-1x.png 1x,
-              ./img/catalog-img/GarminMarqAthlete@mob-2x.png 2x
+              ./img/catalog/GarminMarqAthlete@mob-1x.png 1x,
+              ./img/catalog/GarminMarqAthlete@mob-2x.png 2x
             "
             media="(max-width: 767px)"
           />
           <img
             class="img"
-            src="./img/catalog-img/GarminMarqAthlete@mob-1x.png"
-            alt="GarminMarqAthlete"
+            src="./img/catalog/GarminMarqAthlete@desk-1x.png"
+            alt="watch-2"
           />
         </picture>
         <div class="text-name-price">
@@ -76,29 +76,29 @@
         <picture>
           <source
             srcset="
-              ./img/catalog-img/desk-img/GarminDescentMK1@desk-1x.png 1x,
-              ./img/catalog-img/desk-img/GarminDescentMK1@desk-2x.png 2x
+              ./img/catalog/desk-img/GarminDescentMK1@desk-1x.png 1x,
+              ./img/catalog/desk-img/GarminDescentMK1@desk-2x.png 2x
             "
             media="(min-width: 1280px)"
           />
           <source
             srcset="
-              ./img/catalog-img/tab-img/GarminDescentMK1@tab-1x.png 1x,
-              ./img/catalog-img/tab-img/GarminDescentMK1@tab-2x.png 2x
+              ./img/catalog/tab-img/GarminDescentMK1@tab-1x.png 1x,
+              ./img/catalog/tab-img/GarminDescentMK1@tab-2x.png 2x
             "
             media="(min-width: 768px)"
           />
           <source
             srcset="
-              ./img/catalog-img/GarminDescentMK1@mob-1x.png 1x,
-              ./img/catalog-img/GarminDescentMK1@mob-2x.png 2x
+              ./img/catalog/GarminDescentMK1@mob-1x.png 1x,
+              ./img/catalog/GarminDescentMK1@mob-2x.png 2x
             "
             media="(max-width: 767px)"
           />
           <img
             class="img"
-            src="./img/catalog-img/GarminDescentMK1@mob-1x.png"
-            alt="GarminDescentMK1"
+            src="./img/catalog/GarminDescentMK1@desk-1x.png"
+            alt="watch-3"
           />
         </picture>
         <div class="text-name-price">
@@ -110,29 +110,29 @@
         <picture>
           <source
             srcset="
-              ./img/catalog-img/desk-img/GarminD2@desk-1x.png 1x,
-              ./img/catalog-img/desk-img/GarminD2@desk-2x.png 2x
+              ./img/catalog/desk-img/GarminD2@desk-1x.png 1x,
+              ./img/catalog/desk-img/GarminD2@desk-2x.png 2x
             "
             media="(min-width: 1280px)"
           />
           <source
             srcset="
-              ./img/catalog-img/tab-img/GarminD2@tab-1x.png 1x,
-              ./img/catalog-img/tab-img/GarminD2@tab-2x.png 2x
+              ./img/catalog/tab-img/GarminD2@tab-1x.png 1x,
+              ./img/catalog/tab-img/GarminD2@tab-2x.png 2x
             "
             media="(min-width: 768px)"
           />
           <source
             srcset="
-              ./img/catalog-img/GarminD2@mob-1x.png 1x,
-              ./img/catalog-img/GarminD2@mob-2x.png 2x
+              ./img/catalog/GarminD2@mob-1x.png 1x,
+              ./img/catalog/GarminD2@mob-2x.png 2x
             "
             media="(max-width: 767px)"
           />
           <img
             class="img"
-            src="./img/catalog-img/GarminD2@mob-1x.png"
-            alt="GarminD2"
+            src="./img/catalog/GarminD2@desk-1x.png"
+            alt="watch-4"
           />
         </picture>
         <div class="text-name-price">
@@ -144,22 +144,22 @@
         <picture>
           <source
             srcset="
-              ./img/catalog-img/desk-img/GarminFenix6Pro@desk-1x.png 1x,
-              ./img/catalog-img/desk-img/GarminFenix6Pro@desk-2x.png 2x
+              ./img/catalog/desk-img/GarminFenix6Pro@desk-1x.png 1x,
+              ./img/catalog/desk-img/GarminFenix6Pro@desk-2x.png 2x
             "
             media="(min-width: 1280px)"
           />
           <source
             srcset="
-              ./img/catalog-img/tab-img/GarminFenix6Pro@tab-1x.png 1x,
-              ./img/catalog-img/tab-img/GarminFenix6Pro@tab-2x.png 2x
+              ./img/catalog/tab-img/GarminFenix6Pro@tab-1x.png 1x,
+              ./img/catalog/tab-img/GarminFenix6Pro@tab-2x.png 2x
             "
             media="(min-width: 768px)"
           />
           <img
             class="img"
-            src="./img/catalog-img/tab-img/GarminFenix6Pro@tab-1x.png"
-            alt="GarminFenix6Pro"
+            src="../img/catalog/tab-img/GarminFenix6Pro@desk-1x.png"
+            alt="watch-5"
           />
         </picture>
         <div class="text-name-price">
@@ -171,22 +171,22 @@
         <picture>
           <source
             srcset="
-              ./img/catalog-img/desk-img/TubeWatchS42@desk-1x.png 1x,
-              ./img/catalog-img/desk-img/TubeWatchS42@desk-2x.png 2x
+              ./img/catalog/desk-img/TubeWatchS42@desk-1x.png 1x,
+              ./img/catalog/desk-img/TubeWatchS42@desk-2x.png 2x
             "
             media="(min-width: 1280px)"
           />
           <source
             srcset="
-              ./img/catalog-img/tab-img/TubeWatchS42@tab-1x.png 1x,
-              ./img/catalog-img/tab-img/TubeWatchS42@tab-2x.png 2x
+              ./img/catalog/tab-img/TubeWatchS42@tab-1x.png 1x,
+              ./img/catalog/tab-img/TubeWatchS42@tab-2x.png 2x
             "
             media="(min-width: 768px)"
           />
           <img
             class="img"
-            src="./img/catalog-img/tab-img/TubeWatchS42@tab-1x.png"
-            alt="TubeWatchS42"
+            src="./img/catalog/tab-img/TubeWatchS42@desk-1x.png"
+            alt="watch-6"
           />
         </picture>
         <div class="text-name-price">
