--- a/src/css/catalog.css
+++ b/src/css/catalog.css
@@ -1,7 +1,9 @@
-.container-catalog {
+.section-catalog {
   padding-top: 30px;
   padding-bottom: 30px;
-  text-align: center;
+}
+
+.container-catalog {
 }
 
 .title-cat {
@@ -10,7 +12,6 @@
   line-height: 1;
   letter-spacing: -0.02em;
   margin-bottom: 24px;
-  text-align: start;
 }
 
 .list-cat {
@@ -32,7 +33,6 @@
 
 .text-name-price {
   margin: 0 28px 24px 28px;
-  text-align: start;
 }
 
 .watch-name {
@@ -59,9 +59,11 @@
   font-weight: 500;
   font-size: 14px;
   line-height: 1.28;
-  text-align: center;
   color: #fbfbfb;
   margin-top: 40px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .show-btn:hover,
@@ -74,15 +76,20 @@
 }
 
 @media screen and (min-width: 768px) {
-  .container-catalog {
+  .section-catalog {
     padding-top: 40px;
     padding-bottom: 40px;
+  }
+
+  .title-cat {
+    font-size: 48px;
+    line-height: 0.91;
   }
 
   .list-cat {
     flex-wrap: wrap;
     flex-direction: row;
-    gap: 16px;
+    gap: 32px 16px;
   }
 
   .item-cat {
@@ -117,14 +124,14 @@
 }
 
 @media screen and (min-width: 1280px) {
-  .container-catalog {
+  .section-catalog {
     padding-top: 50px;
     padding-bottom: 50px;
   }
 
   .list-cat {
     justify-content: center;
-    gap: 23px;
+    gap: 32px 23px;
   }
 
   .item-cat {
