--- a/src/partials/catalog.html
+++ b/src/partials/catalog.html
@@ -1,4 +1,4 @@
-<section id="Catalog" class="section-catalog">
+<section id="catalog" class="section-catalog">
   <div class="container container-catalog">
     <h2 class="title-cat">Catalog</h2>
     <ul class="list-cat">
